shipping comments to a second repo

--- a/comments.html
+++ b/comments.html
@@ -1,5 +1,5 @@
 <script src="https://utteranc.es/client.js"
-        repo="vulkan-guide"
+        repo="vblanco20-1/vkguide-comments"
         issue-term="{{ include.term }}"
         label="Comment"
         theme="github-dark"
